# seo-ai-saas

./: README.md  docker-compose.yml
apps/ai-engine/: pyproject.toml
apps/ai-engine/app/: main.py
apps/backend/: package-lock.json  package.json
apps/backend/prisma/: schema.prisma
apps/backend/prisma/migrations/20260209153533_init/: migration.sql
